# YouTube-Comments-Sentiment-Analyzer

./: main.py  pyproject.toml  requirements.txt
Jupyter-Notebooks/: 1-Preprocessing-and-EDA.ipynb  2-Experiment-1-baseline-model.ipynb  3-Experiment-2-BOW-TFIDF.ipynb  4-Experiment-3-TFIDF(1,3)-max-features.ipynb  5_Experiment_4_handling_imbalanced_dataset.ipynb  6-Experiment-5-XGBoost-with-HPT.ipynb  7-Experiment-6-LightGBM-with-HPT.ipynb  8-Experiment-Stacking.ipynb
