[project]
name = "youtube-comment-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.5",
]
