[project]
name = "youtube-comment-analyzer"
version = "0.1.0"
description = "YouTube Comment Analyzer with MLflow + DVC"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    # Core ML
    "numpy>=1.23,<2",
    "pandas>=1.5,<2.3",
    "scikit-learn>=1.2,<1.5",
    "nltk>=3.8",
    # Visualization
    "matplotlib>=3.7,<3.9",
    "seaborn>=0.12,<0.14",
    "wordcloud>=1.9",
    # MLOps
    "mlflow==2.12.1",
    "dvc==3.51.2",
    "dagshub==0.3.27",
    "imbalanced-learn==0.12.3",
    "xgboost==1.7.6",
    "optuna==3.6.1",
    "lightgbm==4.3.0",
]
